Compiler_Project/rsc/tests/typecheck/valid/app.ml
let a = 1 + 2 + 3in
print_int a
