Compiler_Project/rsc/tests/typecheck/invalid/3letrec_badargs.ml
let rec sum a = a+a in
print_int ((sum 3) 3)
